Fixed title spacing (#7)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,6 @@ p {
   margin: 0;
   padding: 0;
   color: white;
-  line-height: 1.5;
 }
 
 @media screen and (max-width: 600px) {
